<resources>
    <string name="app_name">Customer Management</string>
    <string name="image_description">Notepad logo</string>

    <!-- Username and Password-->
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="hint_username">Enter username here</string>
    <string name="hint_password">Enter password here</string>
    <string name="username">jdoe</string>
    <string name="password">welcome1</string>

    <!-- Login -->
    <string name="login_button">Log In</string>
    <string name="login_success">Login Successful</string>
    <string name="login_fail">Login Unsuccessful</string>

    <!-- Logout -->
    <string name="menu_item_logout">Log out</string>
    <string name="logout_dialog_title">Logging Out</string>
    <string name="logout_dialog_textview">Would you like to log out?</string>
    <string name="logout_toast">Logging You Out</string>

    <!-- Menu -->
    <string name="view_sessions">View Sessions</string>
    <string name="sessions_imageview_description">Icon For Session Viewing</string>
    <string name="view_customers">View Customers</string>
    <string name="customers_imageview_description">Icon For Customer Viewing</string>

    <!-- Add customer -->
    <string name="customer_image">Picture of customer</string>
    <string name="image_button">Button to take picture of customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_name_hint">Name</string>
    <string name="billing_information">Billing Information</string>
    <string name="billing_information_hint">123 Example Road\nNowhere, UP 12345</string>
    <string name="number_of_sessions">Number of Sessions</string>
    <string name="placeholder_number">0</string>
    <string name="number_of_sessions_button">Change Number of Sessions</string>
    <string name="save_customer_button">Save Customer</string>
    <string name="saved_toast">Customer Saved</string>
    <string name="deleted_toast">Customer Deleted</string>
    <string name="delete_customer_button">Delete Customer</string>

    <!-- Customer List Menu -->
    <string name="new_customer">New Customer</string>

    <!-- Add session -->
    <string name="change_customer">Change Customer</string>
    <string name="session_description_edittext">Session description here</string>
    <string name="save_session_button">Save Session</string>
    <string name="delete_session_button">Delete Session</string>
    <string name="complete_session_button">Complete Session</string>
    <string name="date_button">Change Date: %1$s</string>
    <string name="time_button">Change Time: %1$s</string>
    <string name="session_description">Session Description</string>
    <string name="session_saved_toast">Session Saved</string>
    <string name="session_deleted_toast">Session Deleted</string>
    <string name="signature_content_description">Customer Signature</string>

    <!-- Session List Menu -->
    <string name="new_session">New Session</string>

    <!-- Dialogs -->
    <string name="customer_list_dialog">Customer List</string>
    <string name="date_picker_dialog">Set the Date</string>
    <string name="time_picker_dialog">Set the Time</string>

    <!-- Session Complete -->
    <string name="customer_signature">Customer Signature</string>
    <string name="submit_receipt">Submit Receipt</string>
    <string name="session_report">
        Customer Name:%1$s\nBilling Address\n\t%2$s\nThe session was completed on %3$s.\nSession Summary:\n%4$s
    </string>
    <string name="session_receipt_subject">Customer Management Session Report</string>
    <string name="send_receipt">Send receipt via</string>

    <!-- Customer Image -->
    <string name="no_image">No Photo Available</string>
    <string name="yes_image">Customer Photo</string>
</resources>
