<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_session_imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/image_background"
                android:layout_margin="10dp"
                android:contentDescription="@string/customer_image"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:layout_marginTop="10dp"
                style="?android:listSeparatorTextViewStyle"/>

            <TextView
                android:id="@+id/add_session_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                tools:text="John Doe"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/add_session_change_customer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_customer"
                android:background="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
          <Button
            android:id="@+id/add_session_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:text="10/13/2016"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/add_session_time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:text="11:30 AM"
            android:background="@color/colorAccent"/>
    <EditText
        android:id="@+id/add_session_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/session_description"/>
<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/add_session_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/save_session_button"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/add_session_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_session_button"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/add_session_complete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/complete_session_button"
            android:background="@color/colorAccent"/>
    </LinearLayout> -->

</LinearLayout>